# kernel-study

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  add.cu  gemm_naive.cu  gemm_tile.cu  gemm_tile_compute.cu  gen_benchmark_results.sh  plot_benchmark_results.py  triton_tiled.py
src/: kernels.cuh  runner.cu  runner.cuh
src/kernels/: 0_naive.cuh  1_tiled.cuh  2_tiled_compute.cuh
